# libedid

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  default.nix  package.nix  shell.nix
.github/workflows/: quality_assurance.yml  static_cheks.yml
examples/edid-workshop/src/: main.cc
include/: base_block.hh  common.hh  cta861_block.hh  edid.hh
include/edid/: base_block.hh  bcp00501.hh  common.hh  cta861_block.hh  cta_data_block.hh  dtd.hh  edid.hh  eighteen_byte_descriptor.hh  eighteen_byte_descriptor_interface.hh  eighteen_byte_descriptors.hh  exceptions.hh  filesystem.hh  hdmi_vendor_data_block.hh  json.hh  json_schemas.hh  timing_modes.hh
schemas/base_block/: base_block.json  standard_timing.json
schemas/common/: ascii_string.json  detailed_timing_descriptor.json  display_name.json  display_range_limits.json  display_serial_number.json  edid.json  established_timings_3.json
schemas/cta861_block/: audio_data_block.json  colorimetry_data_block.json  cta861_block.json  hdmi_vsdb.json  hdr_static_metadata_data_block.json  speaker_allocation_data_block.json  unknown_data_block.json  video_capability_data_block.json  video_data_block.json  ycbcr420_capability_map_data_block.json
scripts/: linuxhw_coverage.sh  linuxhw_download.sh  static_analysis.sh
src/: base_block.cc  bcp00501.cc  common.cc  cta861_block.cc  cta_data_block.cc  dtd.cc  edid.cc  eighteen_byte_descriptor.cc  hdmi_vendor_data_block.cc  json.cc  json_schemas.cc  timing_modes.cc
test/: Makefile
test/include/: common.hh
test/src/: bcp00501_tests.cc  common.cc  hdmi_vendor_data_block.cc  json_tests.cc  main_json_roundtrip.cc  main_roundtrip.cc  test_runner.cc
